Fix invisible placeholder text

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -90,3 +90,7 @@ h3 {
   margin-top: auto;
   justify-content: center;
 }
+
+.form-control::placeholder {
+  color: #ced4da;
+}
